--- a/swagger/heartbeat.yaml
+++ b/swagger/heartbeat.yaml
@@ -9,6 +9,10 @@ endpoints:
       operationId: "get_heartbeat"
       tags:
         - heartbeat
+      description: |
+        This endpoint returns basic "vital signs" for the Open edX API manager
+        in question. It can be used as a simple up/down liveness test or for a
+        more detailed (but still lightweight) analysis of the system.
       consumes:
         - "application/json"
       produces:
@@ -35,10 +39,19 @@ endpoints:
 
 definitions:
   heartbeat:
-    required:
-      - version
     properties:
       version:
         type: "string" 
+        description: |
+          Open edX API version, typically represented as "major.minor.micro".
+          The versioning lifecycle rules will be specific to your Open edX installation.
+        example: "1.0.0"
       id:
         type: "string"
+        description: |
+          Unique configuration deployment identification code, optional and specific to
+          your Open edX installation. For example, this value could be the git hash of
+          the configuration used to spin up the API manager.
+        example: "7effb8a"
+    required:
+      - version
