commenting out examples because - while it's valid Swagger 2.0 and just a comment field - AWS can't handle its presence. ladies and gentlemen, I present 'the cloud'

--- a/swagger/oauth.yaml
+++ b/swagger/oauth.yaml
@@ -91,28 +91,28 @@ definitions:
       access_token:
         type: "string"
         description: "The access token issued by the authorization server."
-        example: "2YotnFZFEjr1zCsicMWpAA"
+        # example: "2YotnFZFEjr1zCsicMWpAA"
       refresh_token:
         type: "string"
         description: |
           Refresh tokens are credentials used to obtain new access tokens once
           authorization has already been granted.
-        example: "tGzv3JOkF0XG5Qx2TlKWIA"
+        # example: "tGzv3JOkF0XG5Qx2TlKWIA"
       scope:
         type: "string"
         description: |
           Whitespace-delimited list of associated scopes. Can be an empty string.
           See https://tools.ietf.org/html/rfc6749#section-3.3 for more detail.
-        example: "read write"
+        # example: "read write"
       token_type:
         type: "string"
         description: "The type of the token issued. Value is case insensitive."
-        example: "Bearer"
+        # example: "Bearer"
       expires_in:
         type: "integer"
         format: "int64"
         description: "The lifetime in seconds of the access token."
-        example: 60
+        # example: 60
     required:
       - access_token
       - scope
