--- a/swagger/heartbeat.yaml
+++ b/swagger/heartbeat.yaml
@@ -45,13 +45,13 @@ definitions:
         description: |
           Open edX API version, typically represented as "major.minor.micro".
           The versioning lifecycle rules will be specific to your Open edX installation.
-        example: "1.0.0"
+        # example: "1.0.0"
       id:
         type: "string"
         description: |
           Unique configuration deployment identification code, optional and specific to
           your Open edX installation. For example, this value could be the git hash of
           the configuration used to spin up the API manager.
-        example: "7effb8a"
+        # example: "7effb8a"
     required:
       - version
