Added token_type parameter to OAuth access token request endpoint
This parameter will enable clients to request alternative token types (e.g. JWT).

ECOM-4221

--- a/swagger/oauth.yaml
+++ b/swagger/oauth.yaml
@@ -29,6 +29,10 @@ endpoints:
           type: string
           format: password
         - in: formData
+          name: token_type
+          required: false
+          type: string
+        - in: formData
           name: username
           required: false
           type: string
