apparently curly braces are not part of the swagger 2.0 spec for the Host field, reverting that change

--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -7,7 +7,7 @@ swagger: "2.0"
 info:
   version: "1.0.0"
   title: "Open edX"
-host: "{{host}}"
+host: "your-open-edx-site.org"
 basePath: "/"
 schemes:
 - "https"
