add initial tests for catalog

--- a/tests/test_all.yaml
+++ b/tests/test_all.yaml
@@ -2,3 +2,4 @@
 - import: 'tests/test_heartbeat.yaml'
 - import: 'tests/test_index.yaml'
 - import: 'tests/test_oauth.yaml'
+- import: 'tests/test_catalog.yaml'
