--- a/tests/test_all.yaml
+++ b/tests/test_all.yaml
@@ -3,3 +3,4 @@
 - import: 'tests/test_index.yaml'
 - import: 'tests/test_oauth.yaml'
 - import: 'tests/test_catalog.yaml'
+- import: 'tests/test_enterprise.yaml'
