--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -38,11 +38,17 @@ paths:
 
   # Enterprise IDA
   "/enterprise/v1/catalogs":
-    $ref: "https://raw.githubusercontent.com/edx/edx-enterprise/fe65dcc/api.yaml#/endpoints/v1/enterpriseCatalogs"
+    $ref: "https://raw.githubusercontent.com/edx/edx-enterprise/be3c590/api.yaml#/endpoints/v1/enterpriseCatalogs"
   "/enterprise/v1/catalogs/{id}":
-    $ref: "https://raw.githubusercontent.com/edx/edx-enterprise/fe65dcc/api.yaml#/endpoints/v1/enterpriseCatalogById"
+    $ref: "https://raw.githubusercontent.com/edx/edx-enterprise/be3c590/api.yaml#/endpoints/v1/enterpriseCatalogById"
   "/enterprise/v1/catalogs/{id}/courses":
-    $ref: "https://raw.githubusercontent.com/edx/edx-enterprise/fe65dcc/api.yaml#/endpoints/v1/enterpriseCatalogCourses"
+    $ref: "https://raw.githubusercontent.com/edx/edx-enterprise/be3c590/api.yaml#/endpoints/v1/enterpriseCatalogCourses"
+  "/enterprise/v1/enterprise-catalogs":
+    $ref: "https://raw.githubusercontent.com/edx/edx-enterprise/be3c590/api.yaml#/endpoints/v1/enterpriseCustomerCatalogs"
+  "/enterprise/v1/enterprise-catalogs/{uuid}":
+    $ref: "https://raw.githubusercontent.com/edx/edx-enterprise/be3c590/api.yaml#/endpoints/v1/enterpriseCustomerCatalogByUuid"
+  "/enterprise/v1/programs/{uuid}":
+    $ref: "https://raw.githubusercontent.com/edx/edx-enterprise/be3c590/api.yaml#/endpoints/v1/programByUuid"
 
 # edX extension point. Lists the vendors in use and their specific
 #  parameters that are expected by upstream refs.
