--- a/tests/test_enterprise.yaml
+++ b/tests/test_enterprise.yaml
@@ -35,3 +35,50 @@
     - url: '/enterprise/v1/catalogs'
     - method: 'GET'
     - expected_status: [400]
+
+- test:
+    - name: 'Enterprise catalog endpoint returns HTTP 200'
+    - url: '/enterprise/v1/enterprise-catalogs'
+    - method: 'GET'
+    - headers: {'Authorization': 'aeiou'}
+    - expected_status: [200]
+
+- test:
+    - name: 'Enterprise catalog by UUID endpoint returns HTTP 200'
+    - url: '/enterprise/v1/enterprise-catalogs/0123456789abcdefg'
+    - method: 'GET'
+    - headers: {'Authorization': 'aeiou'}
+    - expected_status: [200]
+
+- test:
+    - name: 'Program by UUID endpoint returns HTTP 200'
+    - url: '/enterprise/v1/programs/0123456789abcdefg'
+    - method: 'GET'
+    - headers: {'Authorization': 'aeiou'}
+    - expected_status: [200]
+
+- test:
+    - name: 'Enterprise catalog POST is disabled'
+    - url: '/enterprise/v1/enterprise-catalogs'
+    - method: 'POST'
+    - headers: {'Authorization': 'aeiou'}
+    - expected_status: [405]
+
+- test:
+    - name: 'Enterprise catalog GET rejected without authorization'
+    - url: '/enterprise/v1/enterprise-catalogs'
+    - method: 'GET'
+    - expected_status: [400]
+
+- test:
+    - name: 'Enterprise program POST is disabled'
+    - url: '/enterprise/v1/programs/0123456789abcdefg'
+    - method: 'POST'
+    - headers: {'Authorization': 'aeiou'}
+    - expected_status: [405]
+
+- test:
+    - name: 'Enterprise program GET rejected without authorization'
+    - url: '/enterprise/v1/programs/0123456789abcdefg'
+    - method: 'GET'
+    - expected_status: [400]
