add registrar v0 endpoints

--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -30,11 +30,11 @@ paths:
 
   # Catalog IDA
   "/catalog/v1/catalogs":
-    $ref: "https://raw.githubusercontent.com/edx/course-discovery/649a4cb/api.yaml#/endpoints/v1/catalogs"
+    $ref: "https://raw.githubusercontent.com/edx/course-discovery/649a4cb/api-compact.yaml#/endpoints/v1/catalogs"
   "/catalog/v1/catalogs/{id}":
-    $ref: "https://raw.githubusercontent.com/edx/course-discovery/649a4cb/api.yaml#/endpoints/v1/catalogById"
+    $ref: "https://raw.githubusercontent.com/edx/course-discovery/649a4cb/api-compact.yaml#/endpoints/v1/catalogById"
   "/catalog/v1/catalogs/{id}/courses":
-      $ref: "https://raw.githubusercontent.com/edx/course-discovery/649a4cb/api.yaml#/endpoints/v1/catalogCourses"
+    $ref: "https://raw.githubusercontent.com/edx/course-discovery/649a4cb/api-compact.yaml#/endpoints/v1/catalogCourses"
 
   # Enterprise IDA
   "/enterprise/v1/catalogs":
@@ -58,6 +58,20 @@ paths:
   "/enterprise/v1/enterprise-customer/{uuid}/learner-summary":
     $ref: "https://raw.githubusercontent.com/edx/edx-enterprise-data/8fc95e4/api.yaml#/endpoints/v1/enterpriseCustomerLearnerSummary"
 
+  #Registrar
+  "/registrar/v0/jobs/{job_id}":
+    $ref: "https://raw.githubusercontent.com/edx/registrar/21f6816e2e0d40cd1d65a34ea21723f1bfa3f1b1/.api-generated.yaml#/paths/~1v0~1jobs~1{job_id}~1"
+  "/registrar/v0/programs":
+    $ref: "https://raw.githubusercontent.com/edx/registrar/21f6816e2e0d40cd1d65a34ea21723f1bfa3f1b1/.api-generated.yaml#/paths/~1v0~1programs~1"
+  "/registrar/v0/programs/{program_key}":
+    $ref: "https://raw.githubusercontent.com/edx/registrar/21f6816e2e0d40cd1d65a34ea21723f1bfa3f1b1/.api-generated.yaml#/paths/~1v0~1programs~1{program_key}~1"
+  "/registrar/v0/programs/{program_key}/enrollments":
+    $ref: "https://raw.githubusercontent.com/edx/registrar/21f6816e2e0d40cd1d65a34ea21723f1bfa3f1b1/.api-generated.yaml#/paths/~1v0~1programs~1{program_key}~1enrollments~1"
+  "/registrar/v0/programs/{program_key}/courses":
+    $ref: "https://raw.githubusercontent.com/edx/registrar/21f6816e2e0d40cd1d65a34ea21723f1bfa3f1b1/.api-generated.yaml#/paths/~1v0~1programs~1{program_key}~1courses~1"
+  "/registrar/v0/programs/{program_key}/courses/{course_id}/enrollments":
+    $ref: "https://raw.githubusercontent.com/edx/registrar/21f6816e2e0d40cd1d65a34ea21723f1bfa3f1b1/.api-generated.yaml#/paths/~1v0~1programs~1{program_key}~1courses~1{course_id}~1enrollments~1"
+
 # edX extension point. Lists the vendors in use and their specific
 #  parameters that are expected by upstream refs.
 # Upstream API owners: document your dependencies in this index file to
@@ -72,3 +86,4 @@ x-edx-api-vendors:
     - "enterprise_host"
     - "gateway_host"
     - "analytics_api_host"
+    - "registrar_host"
