--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -67,7 +67,7 @@ paths:
       x-amazon-apigateway-integration:
         type: http_proxy
         httpMethod: GET
-        uri: 'https://${stageVariables.registrar_host}/{proxy}'
+        uri: 'https://${stageVariables.registrar_host}/{proxy}/'
         requestParameters:
           integration.request.path.proxy: method.request.path.proxy
     post:
@@ -77,7 +77,7 @@ paths:
       x-amazon-apigateway-integration:
         type: http_proxy
         httpMethod: GET
-        uri: 'https://${stageVariables.registrar_host}/{proxy}'
+        uri: 'https://${stageVariables.registrar_host}/{proxy}/'
         requestParameters:
           integration.request.path.proxy: method.request.path.proxy
     patch:
@@ -87,7 +87,7 @@ paths:
       x-amazon-apigateway-integration:
         type: http_proxy
         httpMethod: GET
-        uri: 'https://${stageVariables.registrar_host}/{proxy}'
+        uri: 'https://${stageVariables.registrar_host}/{proxy}/'
         requestParameters:
           integration.request.path.proxy: method.request.path.proxy
 
