--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -60,31 +60,21 @@ paths:
 
   #Registrar
   "/registrar/":
-    get:
-      operationId: registrar_get_api_docs
-      x-amazon-apigateway-integration:
-        type: http_proxy
-        httpMethod: GET
-        uri: 'https://${stageVariables.registrar_host}/api-docs/'
+    $ref: "https://raw.githubusercontent.com/edx/registrar/7ae77f2b2f59785501f4c7556dc2fa438a8c5cba/.api-generated.yaml#/endpoints/swagger"
   "/registrar/static/{proxy+}":
-    get:
-      operationId: registrar_get_static_asset
-      x-amazon-apigateway-integration:
-        type: http_proxy
-        httpMethod: GET
-        uri: 'https://${stageVariables.registrar_host}/static/{proxy}'
+    $ref: "https://raw.githubusercontent.com/edx/registrar/7ae77f2b2f59785501f4c7556dc2fa438a8c5cba/.api-generated.yaml#/endpoints/static"
   "/registrar/v1-mock/jobs/{job_id}":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/442532dade8ef91af6af1d504d326e7cbe38742d/.api-generated.yaml#/paths/~1v1-mock~1jobs~1{job_id}~1"
+    $ref: "https://raw.githubusercontent.com/edx/registrar/7ae77f2b2f59785501f4c7556dc2fa438a8c5cba/.api-generated.yaml#/paths/~1v1-mock~1jobs~1{job_id}~1"
   "/registrar/v1-mock/programs":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/442532dade8ef91af6af1d504d326e7cbe38742d/.api-generated.yaml#/paths/~1v1-mock~1programs~1"
+    $ref: "https://raw.githubusercontent.com/edx/registrar/7ae77f2b2f59785501f4c7556dc2fa438a8c5cba/.api-generated.yaml#/paths/~1v1-mock~1programs~1"
   "/registrar/v1-mock/programs/{program_key}":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/442532dade8ef91af6af1d504d326e7cbe38742d/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1"
+    $ref: "https://raw.githubusercontent.com/edx/registrar/7ae77f2b2f59785501f4c7556dc2fa438a8c5cba/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1"
   "/registrar/v1-mock/programs/{program_key}/enrollments":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/442532dade8ef91af6af1d504d326e7cbe38742d/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1enrollments~1"
+    $ref: "https://raw.githubusercontent.com/edx/registrar/7ae77f2b2f59785501f4c7556dc2fa438a8c5cba/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1enrollments~1"
   "/registrar/v1-mock/programs/{program_key}/courses":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/442532dade8ef91af6af1d504d326e7cbe38742d/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1courses~1"
+    $ref: "https://raw.githubusercontent.com/edx/registrar/7ae77f2b2f59785501f4c7556dc2fa438a8c5cba/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1courses~1"
   "/registrar/v1-mock/programs/{program_key}/courses/{course_id}/enrollments":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/442532dade8ef91af6af1d504d326e7cbe38742d/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1courses~1{course_id}~1enrollments~1"
+    $ref: "https://raw.githubusercontent.com/edx/registrar/7ae77f2b2f59785501f4c7556dc2fa438a8c5cba/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1courses~1{course_id}~1enrollments~1"
 
 # edX extension point. Lists the vendors in use and their specific
 #  parameters that are expected by upstream refs.
