--- a/tests/test_oauth.yaml
+++ b/tests/test_oauth.yaml
@@ -32,8 +32,8 @@
     - body: 'grant_type=foo&client_id=bar'
     - expected_status: [200]
     - validators:
-        - compare: {jsonpath_mini: 'access_token', comparator: 'eq', expected: 'aeiou'}
-        - compare: {jsonpath_mini: 'refresh_token', comparator: 'eq', expected: 'aeiou'}
-        - compare: {jsonpath_mini: 'scope', comparator: 'eq', expected: 'aeiou'}
-        - compare: {jsonpath_mini: 'token_type', comparator: 'eq', expected: 'aeiou'}
-        - compare: {jsonpath_mini: 'expires_in', comparator: 'eq', expected: 123456789}
+        - compare: {jsonpath_mini: 'access_token', comparator: 'eq', expected: 'access_token'}
+        - compare: {jsonpath_mini: 'refresh_token', comparator: 'eq', expected: 'refresh_token'}
+        - compare: {jsonpath_mini: 'scope', comparator: 'eq', expected: 'scope'}
+        - compare: {jsonpath_mini: 'token_type', comparator: 'eq', expected: 'token_type'}
+        - compare: {jsonpath_mini: 'expires_in', comparator: 'eq', expected: 0}
