--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -28,13 +28,17 @@ paths:
   "/oauth2/v1/access_token":
     $ref: "./oauth.yaml#/endpoints/request_access_token"
 
-  # Catalog IDA
+  # Discovery IDA
+  # Base Discovery Endpoints
+  "/v1/courses":
+    $ref: "https://raw.githubusercontent.com/edx/course-discovery/e855990/api.yaml#/endpoints/v1/courses"
+  # Catalog Endpoints
   "/catalog/v1/catalogs":
-    $ref: "https://raw.githubusercontent.com/edx/course-discovery/649a4cb/api.yaml#/endpoints/v1/catalogs"
+    $ref: "https://raw.githubusercontent.com/edx/course-discovery/e855990/api.yaml#/endpoints/v1/catalogs"
   "/catalog/v1/catalogs/{id}":
-    $ref: "https://raw.githubusercontent.com/edx/course-discovery/649a4cb/api.yaml#/endpoints/v1/catalogById"
+    $ref: "https://raw.githubusercontent.com/edx/course-discovery/e855990/api.yaml#/endpoints/v1/catalogById"
   "/catalog/v1/catalogs/{id}/courses":
-      $ref: "https://raw.githubusercontent.com/edx/course-discovery/649a4cb/api.yaml#/endpoints/v1/catalogCourses"
+    $ref: "https://raw.githubusercontent.com/edx/course-discovery/e855990/api.yaml#/endpoints/v1/catalogCourses"
 
   # Enterprise IDA
   "/enterprise/v1/enterprise-catalogs":
