--- a/tests/test_discovery.yaml
+++ b/tests/test_discovery.yaml
@@ -3,48 +3,14 @@
     - testset: 'Discovery API'
 
 - test:
-    - name: 'Base courses endpoint returns HTTP 200'
-    - url: '/v1/courses'
+    - name: 'Discovery courses endpoint returns HTTP 200'
+    - url: '/discovery/v1/courses'
     - method: 'GET'
     - headers: {'Authorization': 'aeiou'}
     - expected_status: [200]
 
 - test:
-    - name: 'Base courses endpoint rejects without authorization'
-    - url: '/v1/courses'
-    - method: 'GET'
-    - expected_status: [400]
-
-- test:
-    - name: 'Catalogs endpoint returns HTTP 200'
-    - url: '/catalog/v1/catalogs'
-    - method: 'GET'
-    - headers: {'Authorization': 'aeiou'}
-    - expected_status: [200]
-
-- test:
-    - name: 'Catalog by ID endpoint returns HTTP 200'
-    - url: '/catalog/v1/catalogs/1'
-    - method: 'GET'
-    - headers: {'Authorization': 'aeiou'}
-    - expected_status: [200]
-
-- test:
-    - name: 'Catalog courses endpoint returns HTTP 200'
-    - url: '/catalog/v1/catalogs/1/courses'
-    - method: 'GET'
-    - headers: {'Authorization': 'aeiou'}
-    - expected_status: [200]
-
-- test:
-    - name: 'POST is disabled for catalogs'
-    - url: '/catalog/v1/catalogs'
-    - method: 'POST'
-    - headers: {'Authorization': 'aeiou'}
-    - expected_status: [405]
-
-- test:
-    - name: 'GET rejected without authorization'
-    - url: '/catalog/v1/catalogs'
+    - name: 'Discovery courses endpoint rejects without authorization'
+    - url: '/discovery/v1/courses'
     - method: 'GET'
     - expected_status: [400]
