--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -51,6 +51,12 @@ paths:
     $ref: "https://raw.githubusercontent.com/edx/edx-enterprise/260055b/api.yaml#/endpoints/v1/enterpriseCustomerCourseEnrollments"
   "/enterprise/v1/enterprise-customer/{uuid}/learner-summary":
     $ref: "https://raw.githubusercontent.com/edx/edx-enterprise-data/8fc95e4/api.yaml#/endpoints/v1/enterpriseCustomerLearnerSummary"
+  # Enterprise Catalog IDA
+  # These are served from the enterprise catalog IDA, but we surface them with the rest of the enterprise endpoints
+  "/enterprise/v2/enterprise-catalogs":
+    $ref: "https://raw.githubusercontent.com/edx/enterprise-catalog/8547a4a/api.yaml#/endpoints/v1/enterpriseCatalogs" 
+  "/enterprise/v2/enterprise-catalogs/{uuid}":
+    $ref: "https://raw.githubusercontent.com/edx/enterprise-catalog/8547a4a/api.yaml#/endpoints/v1/enterpriseCatalogByUuid"
 
   # Registrar API Proxy
   # Note: There's an unresolved issue involving trailing slashes with proxy integrations in API Gateway.
@@ -134,3 +140,4 @@ x-edx-api-vendors:
     - "gateway_host"
     - "analytics_api_host"
     - "registrar_host"
+    - "enterprise_catalog_host"
