--- a/.github/workflows/upgrade-python-requirements.yml
+++ b/.github/workflows/upgrade-python-requirements.yml
@@ -32,6 +32,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: install dependencies
+        run: sudo apt-get install libcurl4-openssl-dev libssl-dev
+
       - name: make upgrade
         run: |
           cd $GITHUB_WORKSPACE
