fix: add open-api requirement

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -6,3 +6,4 @@ jmespath
 six
 Jinja2
 google-compute-engine		# not strictly required, see: https://github.com/GoogleCloudPlatform/compute-image-packages/issues/262
+openapi-spec-validator      # required by moto
